snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.130037-1.pom.sha256
cf011b731a37654394e8353cddc56841c8ddb8c5c33ec79c146fc2857c2a46c5